...
            self.presenter.setForceCancelFavorite()
        }))
        present(alertDialog, animated: true)
    }
    
    func setFavoriteStatus(_ status: Bool) {
        favoriteImageView.image = status ? UIImage(systemName: "heart.fill") : UIImage(systemName: "heart")
    }
    
    func setMoviePoster(_ urlString: String) {
        posterImageView.pullImageFromTheMovieDB(urlString)
    }
    
...
